# 7colorEpaperImageConverter

./: .gitignore  ATTRIBUTIONS.md  LICENSE  LICENSE.md  README.md  convert.py  image_processor.py  pyproject.toml  requirements.txt
eink_image_pylettizer/: __init__.py  __main__.py  convert.py  image_processor.py
