[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eink_image_pylettizer"
authors = [{name = "Eliška Szopová", email = "eliska@lemí.net"}]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "Pillow>=9.0.0, <11",
    "Wand>=0.6.11, <0.7"
]
dynamic = ["version", "description"]
